--- a/BuilidingEscape/Config/DefaultGame.ini
+++ b/BuilidingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1A3F2443447296CF8C7A748E5244F0DC
+CompanyName=Bader Fahoum
+CompanyDistinguishedName=BaderF
+CopyrightNotice=copy right bader fahoum2018
 
 [StartupActions]
 bAddPacks=True
